fix GatherItem incorrect initOptions body